<resources>
    <string name="app_name">Ekart</string>
    <string name="rightAddress">The Right Address\n For Shopping\n Anyday</string>
    <string name="quality">It is now very easy to reach the\nbest quality among all\nthe products on the internet.</string>
    <string name="start">Start</string>
    <string name="ekart">EKart</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="do_you_have_an_account_login">Do you have an account login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="todo">TODO</string>
    <string name="or_login">Or Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_you_the_password_reset_link_to_your_email">We will send you the password reset link to your email</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="search_now">Search Now</string>
    <string name="see_product">See product</string>
    <string name="best_deal">Best deal</string>
    <string name="best_products">Best Products</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="check_out">Check Out</string>
    <string name="your_shopping_cart_is_empty">Your Shopping Cart is Empty</string>
</resources>