<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:layout_marginTop="120dp"
            android:drawablePadding="6dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/ekart"
            app:drawableStartCompat="@drawable/ic_kleine_shape" />

        <TextView
            android:id="@+id/tvRightAddressForShopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/rightAddress"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvQuality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintStart_toStartOf="@id/tvRightAddressForShopping"
            app:layout_constraintEnd_toEndOf="@id/tvRightAddressForShopping"
            app:layout_constraintTop_toBottomOf="@id/tvRightAddressForShopping"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/quality"
            android:layout_marginTop="15dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegisterAccountOptions"
            android:layout_width="@dimen/medianButtonWidth"
            android:layout_height="@dimen/medianButtonHeight"
            style="@style/blueButtonStyle"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvQuality"
            app:layout_constraintStart_toStartOf="@id/tvQuality"
            app:layout_constraintEnd_toEndOf="@id/tvQuality"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/register"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLoginAccountOptions"
            android:layout_width="@dimen/medianButtonWidth"
            android:layout_height="@dimen/medianButtonHeight"
            style="@style/whiteButtonStyle"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/buttonRegisterAccountOptions"
            app:layout_constraintStart_toStartOf="@id/buttonRegisterAccountOptions"
            app:layout_constraintEnd_toEndOf="@id/buttonRegisterAccountOptions"
            android:text="@string/login"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>